# elm-rust-boilerplate

./: .gitignore  .ports.env  Dockerfile  README.md  bonnie.toml  docker-compose.yml
api/: .env.development  .env.local.example  Cargo.toml
api/lib/: Cargo.toml
api/lib/src/: db.rs  errors.rs  graphql.rs  lib.rs  load_env.rs  pubsub.rs
api/lib/src/schemas/: users.rs
api/src/: db.rs  graphql.rs  lib.rs  load_env.rs  main.rs  oid.rs  schema.rs
api/src/schemas/: users.rs
ui/src/: Main.elm
