[package]
name = "elm-rust-boilerplate-api"
version = "0.1.0"
authors = ["arctic_hen7 <arctic_hen7@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
mongodb = "1.2.1"
dotenv = "0.15.0"
tokio = { version = "0.2.25", features = ["full"] } # `mongodb` needs an 0.2.x version
async-graphql = "2.8.2"

# This annotation explicitly states the default behaviour, but it's needed for `cargo vendor` in the Docker build
[[bin]]
name = "main"
path = "src/main.rs"
