[package]
name = "elm-rust-boilerplate-api"
version = "0.1.0"
authors = ["arctic_hen7 <arctic_hen7@pm.me>"]
edition = "2018"
default-run = "serverful" # Unless otherwise specified, this crate will use the serverful architecture with Actix rather than the serverless

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
mongodb = "1.2.1"
dotenv = "0.15.0"
tokio = { version = "0.2.25", features = ["full"] } # `mongodb` needs an 0.2.x version
async-graphql = "2.8.2"
async-graphql-actix-web = "2.8.2"
actix-web = "3.3.2"
futures = "0.3.14"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "serverful"
path = "src/bin/serverful.rs"

[[bin]]
name = "serverless"
path = "src/bin/serverless.rs"
